--- a/capstone-showcase/src/CSS/MechanicalEngineering.css
+++ b/capstone-showcase/src/CSS/MechanicalEngineering.css
@@ -65,8 +65,8 @@
 }
 
 .mechanical-engineering .main-page-title {
-  font-size: clamp(2rem, 5vw, 4rem);               
-  font-weight: 700;                  
+  font-size: clamp(2vw, 5vw, 20vw);
+  font-weight: 700;
   color: #222222;
   line-height: 1;
 }
